# RLExplorationGame

./: .gitignore  DQN_neural_network.py  README.md  concatenate_gifs.py  pyproject.toml  train_network.py
RL_map_exploration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
RL_map_exploration/rl_environment/: constants.py  environment.py  fish.py  main.py  map.py  ray.py
environment/: constants.py  environment.py  fish.py  main.py  map.py  ray.py
models/: last_model.pth  last_model_v1.pth  trained_model_v1.pth  trained_model_v2.pth  trained_model_v3.pth
