[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RL_map_exploration"
version = "0.1.0"
description = ""
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["RL_map_exploration", "RL_map_exploration.rl_environment"]

[tool.black]
line-length = 100
